--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 REACT_APP_CLOUDINARY_CLOUD_NAME = darshchat
-REACT_APP_BACKEND_URL = https://chikku-chat-api.vercel.app
+REACT_APP_BACKEND_URL = https://darsh-chat-server.onrender.com
